# naver-blog-image-downloader

./: .gitignore  README.md  SETUP.md  app_settings.json  blog_posting.http  downloader.py  main.py  main_ui.py  pyproject.toml  request_manager.py  requirements.txt  scrap_title_for_make_dir.md
.cursor/rules/: python.mdc
core/: __init__.py  settings.py  ui_controller.py
image_processor/: __init__.py  batch_processor.py  transformer.py
scraper/: scraper.py
test/: test_transformer.py
ui/: untitled.ui  untitled_ui.py
utils/: downloader.py  utils.py
