[project]
name = "naver-blog-image-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "pillow>=11.3.0",
    "pyinstaller>=6.14.1",
    "pyside6>=6.9.1",
    "requests>=2.32.4",
    "urllib3>=2.4.0",
]
